# RP2040_HelloWorld

./: CMakeLists.txt  README.md  build.bat  openocd.bat
src/: CMakeLists.txt  main.cpp
